stm32 atomics update

--- a/tests/Stm32Atomics/makefile
+++ b/tests/Stm32Atomics/makefile
@@ -98,7 +98,7 @@ MCFLAGS = -mcpu=$(MCU)
 
 ASFLAGS = $(MCFLAGS) -g -gdwarf-2 -Wa,-amhls=$(<:.s=.lst) $(ADEFS)
 CPFLAGS = $(MCFLAGS) $(OPT) -gdwarf-2 -mthumb -fomit-frame-pointer -Wall -Wstrict-prototypes -fverbose-asm -Wa,-ahlms=$(<:.c=.lst) $(DEFS)
-CPPFLAGS = $(MCFLAGS) $(OPT) -gdwarf-2 -mthumb -fomit-frame-pointer -Wall -fverbose-asm -Wa,-ahlms=$(<:.cpp=.lst) $(DEFS)
+CPPFLAGS = $(MCFLAGS) $(OPT) -gdwarf-2 -mthumb -fomit-frame-pointer -Wall -fverbose-asm -Wa,-ahlms=$(<:.cpp=.lst) $(DEFS) -fno-exceptions
 LDFLAGS_RAM = $(MCFLAGS) -mthumb -nostartfiles -T$(LDSCRIPT_RAM) -Wl,-Map=$(PROJECT).map,--cref $(LIBDIR)
 
 # Generate dependency information
