--- a/examples/FormatWriterMsp430/main.cbp
+++ b/examples/FormatWriterMsp430/main.cbp
@@ -7,19 +7,20 @@
 		<Option compiler="msp430gcc" />
 		<Build>
 			<Target title="Release">
-				<Option output="bin/Release/main.elf" prefix_auto="1" extension_auto="0" />
-				<Option object_output="obj/Release/" />
+				<Option output="bin\Release\main.elf" prefix_auto="1" extension_auto="0" />
+				<Option object_output="obj\Release\" />
 				<Option type="1" />
 				<Option compiler="msp430gcc" />
 				<Option use_console_runner="0" />
 				<Compiler>
 					<Add option="-Os" />
+					<Add option="-pedantic" />
 					<Add option="-Wall" />
 				</Compiler>
 			</Target>
 			<Target title="Debug">
-				<Option output="bin/Debug/main.elf" prefix_auto="1" extension_auto="0" />
-				<Option object_output="obj/Debug/" />
+				<Option output="bin\Debug\main.elf" prefix_auto="1" extension_auto="0" />
+				<Option object_output="obj\Debug\" />
 				<Option type="1" />
 				<Option compiler="msp430gcc" />
 				<Option use_console_runner="0" />
@@ -32,6 +33,7 @@
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
+			<Add option="-g" />
 			<Add option="-ffunction-sections" />
 			<Add option="-fshort-enums" />
 			<Add option="-fno-rtti" />
@@ -41,8 +43,8 @@
 			<Add option="-MF $(TARGET_OUTPUT_FILE).dep" />
 			<Add option="-mmcu=msp430x2231" />
 			<Add option="-DF_CPU=16000000UL" />
-			<Add directory="../../mcucpp" />
-			<Add directory="../../mcucpp/MSP430" />
+			<Add directory="..\..\mcucpp" />
+			<Add directory="..\..\mcucpp\MSP430" />
 		</Compiler>
 		<Linker>
 			<Add option="-mmcu=msp430x2231" />
