utf8 encoding in progress

--- a/tests/Tests/Tests.cbp
+++ b/tests/Tests/Tests.cbp
@@ -12,8 +12,6 @@
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
-					<Add option="-Winline" />
-					<Add option="-pedantic" />
 					<Add option="-Wall" />
 				</Compiler>
 			</Target>
@@ -36,6 +34,7 @@
 		<Unit filename="FormatWriter.cpp" />
 		<Unit filename="PinList.cpp" />
 		<Unit filename="containers.cpp" />
+		<Unit filename="encoding.cpp" />
 		<Unit filename="fixedpoint.cpp" />
 		<Unit filename="istream_test.cpp" />
 		<Unit filename="timers.cpp" />
