--- a/gtest/SConscript
+++ b/gtest/SConscript
@@ -1,11 +1,9 @@
 
 Import('testEnv')
 
-print testEnv.Dump()
 
-gtest_main = testEnv.Object('gtest_main.cc')
-gtest_all = testEnv.Object('gtest-all.cc')
+g_test_sources = [testEnv.File('gtest_main.cc'), testEnv.File('gtest-all.cc')]
 
-gtest_objects = gtest_main + gtest_all
+testEnv['g_test_sources'] = g_test_sources
 
-Export('gtest_objects')
+#Export(testEnv)
