--- a/tests/UnitTests/SConscript
+++ b/tests/UnitTests/SConscript
@@ -1,5 +1,6 @@
 
-testEnv = Environment(toolpath = ['#/scons'], tools=['mcucpp'])
+Import('McucppHome')
+testEnv = Environment(toolpath = [McucppHome + '/scons'], tools=['mcucpp'])
 
 testEnv.Append(CPPPATH = '#/./')
 testEnv.Tool('code-blocks')
@@ -8,6 +9,5 @@ tests = testEnv.Object(testEnv.Glob('*.cpp'))
 testEnv['CURRENT_BUILD_TARGET'] = 'UnitTests'
 
 test_result = testEnv.Test('mcucpp_test', tests)
-proj = testEnv.CodeBlocksProject('#/mcucpp_test.cbp', test_result)
 
 testEnv.Alias("UnitTests", [test_result])
