Add submodule avr-libstdcpp
Minor build fixes and cleanup

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -26,6 +26,9 @@
             "group": {
                 "kind": "build",
                 "isDefault": true
+            },
+            "presentation": {
+                "clear": true
             }
         }
     ]
