--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "3rdparty/googletest"]
 	path = 3rdparty/googletest
 	url = https://github.com/google/googletest.git
+[submodule "3rdparty/avr-libstdcpp"]
+	path = 3rdparty/avr-libstdcpp
+	url = https://github.com/modm-io/avr-libstdcpp
+	branch = master
