Unifying DMA interface of STM32F4xx with STM32L4xx

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -96,5 +96,6 @@
     "gtest-adapter.debugConfig": [
         "Debug tests"
     ],
-    "gtest-adapter.supportLocation": true
+    "gtest-adapter.supportLocation": true,
+    "cmake.configureOnOpen": false
 }
